# LLVM_temp

./: CMakeLists.txt  PassTest.cpp  README.md
pass/GlobalVariableToLocal/: CMakeLists.txt
pass/GlobalVariableToLocal/src/: GlobalVariableToLocal.cpp  GlobalVariableToLocal.hpp
pass/GlobalVariableToLocal/test/: FuncLib.c  FuncLib.c.lzh  FuncLib.ll  FuncLib.ll.lzh  test.c  test.ll
pass/Power2ToLShift/: CMakeLists.txt
pass/Power2ToLShift/src/: Power2ToLShift.cpp  Power2ToLShift.hpp
pass/Power2ToLShift/test/: test.c  test.ll
pass/easypass/: CMakeLists.txt
pass/easypass/src/: easypass.cpp  easypass.hpp
test/: hoge1.cpp  hoge2.cpp  hoge2.ll
